revert tolist due to maven error
Signed-off-by: Andrew Fiddian-Green <software@whitebear.ch>