@@ -17,7 +17,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.measure.Unit;
 
@@ -88,7 +87,7 @@ public interface QuantityTypeArithmeticGroupFunction extends GroupFunction {
         @SuppressWarnings({ "rawtypes" })
         protected List<QuantityType> referenceUnitQuantityTypes(Set<Item> items) {
             return items.stream().map(i -> i.getState()).map(s -> referenceUnitQuantityType(s)).filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .map(s -> (QuantityType) s).toList();
         }
     }
 
